--- a/sPlotter.csproj
+++ b/sPlotter.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FftSharp" Version="2.1.0" />
     <PackageReference Include="ScottPlot" Version="5.0.34" />
     <PackageReference Include="ScottPlot.WinForms" Version="5.0.34" />
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
